--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ classifiers = [
     'Development Status :: 4 - Beta',
     'Intended Audience :: Developers',
     'Topic :: Software Development :: Libraries :: Python Module',
+    'Topic :: Software Development :: Testing',
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3 :: Only',
     'License :: OSI Approved :: MIT License',
@@ -22,6 +23,11 @@ packages = [{ include = 'croco_selenium' }]
 [tool.poetry.dependencies]
 python = '^3.11'
 selenium = "^4.16.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+twine = "^4.0.2"
+build = "^1.0.3"
 
 [build-system]
 requires = ['poetry-core']
