--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ homepage = 'https://github.com/blnkoff/croco-selenium'
 classifiers = [
     'Development Status :: 4 - Beta',
     'Intended Audience :: Developers',
-    'Topic :: Software Development :: Libraries :: Python Module',
+    'Topic :: Software Development :: Libraries :: Python Modules',
     'Topic :: Software Development :: Testing',
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3 :: Only',
